Fix some z-indexes

--- a/app/stylesheets/shell-window/toolbar-dropdown.less
+++ b/app/stylesheets/shell-window/toolbar-dropdown.less
@@ -160,6 +160,7 @@
   position: fixed;
   left: 82px;
   top: 70px;
+  z-index: 20;
 
   width: 350px;
   padding: 0;
