--- a/app/stylesheets/shell-window/toolbar-input-group.less
+++ b/app/stylesheets/shell-window/toolbar-input-group.less
@@ -160,7 +160,7 @@
     width: 100%;
     top: 28px;
     background: #fff;
-    z-index: 2;
+    z-index: 20;
     border: 1px solid #ddd;
     border-top: 0;
     padding-bottom: 3px;
